syntax = "proto3";

package datakeeper;

option go_package = "src/grpc/datakeeper";

message FilePortRequest {
    string filename = 1;
    string port_number = 2;
}

message SuccessResponse {
    bool success = 1;
}

service DataKeeperService {
    rpc TransferFile(FilePortRequest) returns (SuccessResponse);
}
